add: swagger documentation 95%
