# src/Swagger.json
@@ -27,94 +27,110 @@
         "application/json"
     ],
     "paths": {
-        "/messages":{
-            "get":{
-                "tags": [
-                    "Messages"
-                ],
-                "summary": "Get all messages",
-                "responses": {
-                    "200":{
-                        "description": "OK",
-                        "schema":{
-                            "$ref": "messages"
-                        }
-                    },
-                    "400":{
-                        "description": "failed.bad request"
-                       },
-                    "403":{
-                        "description": "not logged in"
-                    }
-                }
-            }
-        },
-        "/messages/send":{
+        "/auth/signup":{
             "post": {
-                "tags": [
-                    "Messages"
-                ],
-                "summary": "Send a new message",
+                "tags": ["Authentication"],
+                "summary": "Add a new user",
+                "consumes":["application/json"],
+                "produces":["application/json"],
                 "parameters": [
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "The sent message",
+                        "description": "new user info",
                         "schema": {
-                            "$ref": "#/definitions/message"
+                            "$ref": "#/definitions/user"
                         }
                     }
                 ],
-                "produces":[
-                    "application/json"
-                ],
                 "responses": {
-                   "200":{
-                    "description": "Ok",
-                    "schema":{
-                        "$ref": "#/definitions/id"
+                    "200":{
+                        "description": "ok"
+                    },
+                    "201":{
+                        "description": "user created"
+                    },
+                    "400":{
+                        "description": "bad request"
                     }
-                   },
-                   "400":{
-                    "description": "failed.bad request"
-                   }
                 }
             }
         },
-        "/messages/{id}":{
+        "/auth/login":{
+            "post": {
+                "tags": ["Authentication"],
+                "summary": "Login",
+                "consumes":["application/json"],
+                "produces":["application/json"],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "login user",
+                        "schema": {
+                            "$ref": "#/definitions/loginUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200":{
+                        "description": "ok",
+                        "headers": {
+                            "Set-Cookie":{
+                                "description": "Genereted a cookie",
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400":{
+                        "description": "bad request"
+                    },
+                    "401":{
+                        "description": "no existing user"
+                    },
+                    "403":{
+                        "description": "wrong credentials"
+                    }
+                },
+                "security": [
+                    {
+                        "KYZIE_AUTH":[]
+                    }
+                ]
+            }
+        },
+        "/users":{
+            "get": {
+                "tags": ["Users"],
+                "summary": "Get all users",
+                "responses": {
+                    "200":{
+                        "description": "Ok",
+                        "schema":{
+                            "$ref": "users"
+                        }
+                    },
+                    "400":{
+                        "description": "Bad request"
+                    },
+                    "403":{"description": "not logged in"}
+                }
+            }
+        },
+        "/users/{id}":{
             "parameters": [
                 {
                     "name": "id",
                     "in": "path",
-                    "description": "ID of the message",
+                    "description": "ID of user",
                     "required": true,
                     "type": "string"
                 }
             ],
-            "get": {
+            "delete":{
+                "summary": "delete user by ID",
                 "tags": [
-                    "Messages"
-                ],
-                "summary": "Get message by ID",
-                "responses": {
-                    "200":{
-                        "description": "OK",
-                        "schema":{
-                            "$ref": "#/definitions/message"
-                        }
-                    },
-                    "404":{
-                        "description": "Failed. Innexistent message"
-                    },
-                    "400":{
-                        "description": "Failed. Bad request"
-                    }
-                }
-            },
-            "delete": {
-                "summary": "delete a message by id",
-                "tags": [
-                    "Messages"
+                    "Users"
                 ],
                 "responses": {
                     "200":{
@@ -123,11 +139,50 @@
                             "$ref": "#/definitions/id"
                         }
                     },
+                    "400":{
+                        "description": "Bad request"
+                    },
                     "404":{
-                        "description": "failed. Innexistent message"
+                        "description": "Innexistent user"
+                    },
+                    "403":{
+                        "description": "not logged in"
+                    }
+                }
+            },
+            "patch": {
+                "summary": "Update user info",
+                "tags": ["Users"],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "User updates",
+                        "schema": {
+                            "$ref": "#/definitions/userPatch"
+                        }
+                    }
+                ],
+                "consumes":["application/json"],
+                "produces":["application/json"],
+                "responses": {
+                    "200":{
+                        "description": "OK",
+                        "schema":{
+                            "$ref": "#/definitions/id"
+                        }
                     },
                     "400":{
-                        "description": "failed. Bad request"
+                        "description": "bad request"
+                    },
+                    "403":{
+                        "description": "Not logged in"
+                    },
+                    "404":{
+                        "description": "Innexistent user"
+                    },
+                    "500":{
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -322,79 +377,212 @@
                 }
             }
         },
-        "/auth/signup":{
-            "post": {
-                "tags": ["Authentication"],
-                "summary": "Add a new user",
-                "consumes":["application/json"],
-                "produces":["application/json"],
+        "/blogs/{id}/comments":{
+            "parameters": [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "description": "id of blog",
+                    "required": true,
+                    "type": "string"
+                }
+            ],
+            "get":{
+                "summary": "Get all comments",
+                "description": "Fetch all comments in DB",
+                "tags": ["Comments"],
+                "responses": {
+                    "200":{
+                        "description": "Ok",
+                        "schema":{
+                            "$ref": "#/definitions/comments"
+                        }
+                    },
+                    "400":{
+                        "description": "Bad request"
+                    },
+                    "404":{
+                        "description": "Innexistent blog"
+                    }
+                }
+            },
+            "post":{
+                "tags": ["Comments"],
+                "summary": "Send new comment",
+                "description": "Adding a comment",
                 "parameters": [
                     {
                         "in": "body",
-                        "name": "body",
-                        "description": "new user info",
+                        "name": "comment body",
                         "schema": {
-                            "$ref": "#/definitions/user"
+                            "$ref": "#/definitions/comment"
                         }
                     }
                 ],
                 "responses": {
                     "200":{
-                        "description": "ok"
+                        "description": "OK"
                     },
                     "201":{
-                        "description": "user created"
+                        "description": "Comment created",
+                        "schema":{
+                            "type":"object"
+                        }
                     },
                     "400":{
                         "description": "bad request"
+                    },
+                    "404":{
+                        "description": "Innexistent blog"
+                    }
+                }
+            }
+
+        },
+        "/blogs/{id}/comments/{cId}":{
+            "parameters": [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "description": "id of the blog",
+                    "required": true,
+                    "type": "string"
+                },
+                {
+                    "name": "cId",
+                    "in": "path",
+                    "description": "id of the comment",
+                    "required": true,
+                    "type": "string"
+                }
+            ],
+            "delete": {
+                "summary": "delete comment by ID",
+                "tags": ["Comments"],
+                "responses": {
+                    "200":{
+                        "description": "OK"
+                    },
+                    "201":{
+                        "description": "Deleted"
+                    },
+                    "400":{
+                        "description": "Bad request"
+                    },
+                    "403":{
+                        "description": "Not logged in"
+                    },
+                    "404":{
+                        "description": "blog not found"
                     }
                 }
             }
         },
-        "/auth/login":{
+        "/messages":{
+            "get":{
+                "tags": [
+                    "Messages"
+                ],
+                "summary": "Get all messages",
+                "responses": {
+                    "200":{
+                        "description": "OK",
+                        "schema":{
+                            "$ref": "messages"
+                        }
+                    },
+                    "400":{
+                        "description": "failed.bad request"
+                       },
+                    "403":{
+                        "description": "not logged in"
+                    }
+                }
+            }
+        },
+        "/messages/send":{
             "post": {
-                "tags": ["Authentication"],
-                "summary": "Login",
-                "consumes":["application/json"],
-                "produces":["application/json"],
+                "tags": [
+                    "Messages"
+                ],
+                "summary": "Send a new message",
                 "parameters": [
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "login user",
+                        "description": "The sent message",
                         "schema": {
-                            "$ref": "#/definitions/loginUser"
+                            "$ref": "#/definitions/message"
                         }
                     }
                 ],
+                "produces":[
+                    "application/json"
+                ],
+                "responses": {
+                   "200":{
+                    "description": "Ok",
+                    "schema":{
+                        "$ref": "#/definitions/id"
+                    }
+                   },
+                   "400":{
+                    "description": "failed.bad request"
+                   }
+                }
+            }
+        },
+        "/messages/{id}":{
+            "parameters": [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "description": "ID of the message",
+                    "required": true,
+                    "type": "string"
+                }
+            ],
+            "get": {
+                "tags": [
+                    "Messages"
+                ],
+                "summary": "Get message by ID",
                 "responses": {
                     "200":{
-                        "description": "ok",
-                        "headers": {
-                            "Set-Cookie":{
-                                "description": "Genereted a cookie",
-                                "type": "string"
-                            }
+                        "description": "OK",
+                        "schema":{
+                            "$ref": "#/definitions/message"
                         }
                     },
+                    "404":{
+                        "description": "Failed. Innexistent message"
+                    },
                     "400":{
-                        "description": "bad request"
-                    },
-                    "401":{
-                        "description": "no existing user"
-                    },
-                    "403":{
-                        "description": "wrong credentials"
+                        "description": "Failed. Bad request"
                     }
-                },
-                "security": [
-                    {
-                        "KYZIE_AUTH":[]
+                }
+            },
+            "delete": {
+                "summary": "delete a message by id",
+                "tags": [
+                    "Messages"
+                ],
+                "responses": {
+                    "200":{
+                        "description": "OK",
+                        "schema":{
+                            "$ref": "#/definitions/id"
+                        }
+                    },
+                    "404":{
+                        "description": "failed. Innexistent message"
+                    },
+                    "400":{
+                        "description": "failed. Bad request"
                     }
-                ]
+                }
             }
         }
-
 
     },
     "securityDefinitions": {
@@ -416,9 +604,6 @@
                 },
                 "messageBody":{
                     "type":"string"
-                },
-                "read":{
-                    "type":"boolean"
                 }
             }
         },
@@ -504,6 +689,14 @@
                 }
             }
         },
+        "userPatch":{
+            "type":"object",
+            "properties": {
+                "username":{
+                    "type":"string"
+                }
+            }
+        },
         "loginUser":{
             "type":"object",
             "properties": {
@@ -524,6 +717,26 @@
                     "type":"object",
                     "additionalProperties": {
                         "$ref": "#/definitions/user"
+                    }
+                }
+            }
+        },
+        "comment":{
+            "type":"object",
+            "properties": {
+                "commentBody":{
+                    "type":"string",
+                    "required": ["true"]
+                }
+            }
+        },
+        "comments":{
+            "type":"array",
+            "properties": {
+                "comments":{
+                    "type":"object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/comment"
                     }
                 }
             }
