# src/routers/comments.ts
@@ -9,6 +9,6 @@ import { commentValidator } from '../middlewares/joi_validation';
 
 export default(router:express.Router)=>{
     router.get('/blogs/:id/comments',getBlogComments);
-    router.post('/blogs/:id/comments/new',isAuthenticated,commentValidator,createBlogComment);
+    router.post('/blogs/:id/comments',isAuthenticated,commentValidator,createBlogComment);
     router.delete('/blogs/:id/comments/:cId',isAuthenticated,deleteBlogComment)
 }
